--- a/index.html
+++ b/index.html
@@ -217,9 +217,18 @@
       <div class="big__slids__wrap">
         <div class="container is">
           <div class="big__slids__wrpa slidss">
-            <div class="big__slids__is"><img alt="" src="./images/slids-1.png"></div>
-            <div class="big__slids__is"><img alt="" src="./images/slids-1.png"></div>
-            <div class="big__slids__is"><img alt="" src="./images/slids-1.png"></div>
+            <div class="big__slids__is">
+              <img class="bid__img" alt="" src="./images/slids-1.png">
+              <img class="bid__img__mob" alt="" src="./images/slids-2.png">
+            </div>
+            <div class="big__slids__is">
+              <img class="bid__img" alt="" src="./images/slids-1.png">
+              <img class="bid__img__mob" alt="" src="./images/slids-2.png">
+            </div>
+            <div class="big__slids__is">
+              <img class="bid__img" alt="" src="./images/slids-1.png">
+              <img class="bid__img__mob" alt="" src="./images/slids-2.png">
+            </div>
           </div>
         </div>
       </div>
